--- a/scss/main.scss
+++ b/scss/main.scss
@@ -244,7 +244,6 @@ body {
   background-size: cover;
   background-position: center;
   color: $light;
-
   p {
     line-height: 157px;
     font-family: $secondary-font;
@@ -252,6 +251,7 @@ body {
     font-weight: 300;
     font-size: 20px;
     text-transform: capitalize;
+    margin-bottom: 0;
   }
 }
 
